--- a/_includes/layouts/posts.njk
+++ b/_includes/layouts/posts.njk
@@ -1,6 +1,7 @@
 ---
   layout: 'layouts/base.njk'
   bodyStyle: "background-color: #30305a;"
+  stylesheet: posts
 ---
 <h1>{{title}}</h1>
 {{ content | safe }}
