--- a/_includes/layouts/projects.njk
+++ b/_includes/layouts/projects.njk
@@ -1,6 +1,7 @@
 ---
   layout: 'layouts/base.njk'
   bodyStyle: "background-color: #20202a; color: #70cc70"
+  stylesheet: projects
 ---
 <h1>{{ title }}</h1>
 {{ content | safe }}
