Too many changes at once smh

--- a/_includes/components/macros.njk
+++ b/_includes/components/macros.njk
@@ -1,10 +1,11 @@
-{% macro gridCard(type, url, label, coverImg) %}
+{% macro gridCard(type, url, label, coverImg, date) %}
 <li class="grid-card {{type}}">
 <a href="{{ url }}">
   {% if type === 'books' %}
-  <img src="/assets/{{coverImg}}" alt="Cover of {{label}}">
+  <img src="/assets/{{coverImg}}" alt="Cover of {{label}}" loading="lazy">
   {% endif %}
   <span>{{label}}</span>
+  {% if date %}<span>updated <time>{{ date | formatDate }}</time></span>{% endif %}
 </a>
 </li>
 {% endmacro %}
