--- a/_includes/styles/posts.css
+++ b/_includes/styles/posts.css
@@ -1,10 +1,10 @@
 main {
-  color: papayawhip;
   max-width: 80ch;
   margin-inline: auto;
 }
 
-main img {
+main img,
+main video {
   display: block;
   max-width: 100%;
   margin: 3rem auto;
