--- a/_includes/components/nav.njk
+++ b/_includes/components/nav.njk
@@ -1,5 +1,5 @@
-<nav style="position: sticky; top: 16px; margin: 1rem; display: flex; gap: .5rem; padding: .5rem; border: solid; width: fit-content;">
-  <a href="/" style="color: white">f(n)</a>
+<nav class="site-nav">
+  <a href="/" style="color: var(--pop)">f(n)</a>
   {%- for type in contentTypes -%}
   <a href="/{{ type.name }}" {%- if page.url.includes(type.name) -%}aria-current="page"{%- endif -%}>{{ type.name }}</a>
   {%- endfor -%}
