--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -7,7 +7,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{%- if title -%}{{title}} |&nbsp;{%- endif -%}f.noirot's garden</title>
+    <link rel="preload" href="/styles/fonts.css" as="style">
     <link rel="stylesheet" href="/styles/base.css">
+    <link rel="stylesheet" href="https://unpkg.com/prismjs@1.20.0/themes/prism-coy.css">
     {% if stylesheet %}
     <link rel="stylesheet" href="/styles/{{ stylesheet }}.css">
     {% endif %}
@@ -17,5 +19,6 @@
     <main>
     {{ content | safe }}
     </main>
+    {% include 'components/footer.njk' %}
   </body>
 </html>
