--- a/_includes/components/nav.njk
+++ b/_includes/components/nav.njk
@@ -1,7 +1,12 @@
-<nav class="site-nav">
-  <a href="/" style="color: var(--pop)">f(n)</a>
-  {%- for type in contentTypes -%}
-  <a href="/{{ type.name }}" {%- if page.url.includes(type.name) -%}aria-current="page"{%- endif -%}>{{ type.name }}</a>
-  {%- endfor -%}
-  <a href="/about">me</a>
-</nav>
+{%- import "components/macros.njk" as macros -%}
+
+<div class="nav-wrapper">
+  <nav class="site-nav">
+    <a href="/" style="color: var(--pop)">f(n)</a>
+    {%- for type in contentTypes -%}
+    <a href="/{{ type.name }}" {%- if page.url.includes(type.name) -%}aria-current="page"{%- endif -%}>{{ type.name }}</a>
+    {%- endfor -%}
+    <a href="/about">me</a>
+  </nav>
+  {{ macros.searchBar(collections.all) }}
+</div>
