--- a/_includes/styles/base.css
+++ b/_includes/styles/base.css
@@ -38,12 +38,23 @@ a:hover {
   color: var(--pop);
 }
 
-.site-nav {
+.nav-wrapper {
   position: sticky;
   top: 16px;
   margin: 1rem;
   display: flex;
+  justify-content: space-between;
+}
+
+.site-nav,
+.searchbar,
+.searchbar {
+  display: flex;
   gap: 0.5rem;
+}
+.site-nav,
+.searchbar,
+.searchbar .search-results {
   padding: 0.5rem;
   background-color: rgba(var(--bg), 0.75);
   backdrop-filter: blur(3px);
@@ -56,6 +67,46 @@ a:hover {
 .site-nav a:hover,
 .site-nav a[aria-current="page"] {
   color: var(--pop);
+}
+
+.searchbar input {
+  background-color: var(--near-bg);
+  color: var(--text);
+  border: solid var(--mid) 1px;
+  border-radius: 0;
+}
+.searchbar input::placeholder {
+  color: var(--text);
+}
+.searchbar .search-results {
+  position: absolute;
+  top: calc(100% + 1rem);
+  right: 0;
+  max-height: 50vh;
+  overflow: auto;
+  width: max-content;
+  max-width: 400px;
+}
+.search-results ul {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+}
+.search-results li {
+  padding: 0.25rem 0.5rem;
+  border: solid 1px var(--near-bg);
+}
+.search-results li:hover {
+  color: var(--pop);
+}
+.search-results a {
+  display: flex;
+  justify-content: space-between;
+}
+.search-results a span {
+  color: var(--mid);
 }
 
 main {
