--- a/_includes/layouts/now.njk
+++ b/_includes/layouts/now.njk
@@ -5,5 +5,6 @@
 
 <h1>{{title}}</h1>
 {{ content | safe }}
+<p class="signoff">- frank, {{page.fileSlug}}</p>
 
 {% include "components/backlinksSection.njk" %}
