--- a/_includes/layouts/projects.njk
+++ b/_includes/layouts/projects.njk
@@ -1,9 +1,13 @@
 ---
   layout: 'layouts/base.njk'
-  bodyStyle: "background-color: #20202a; color: #70cc70"
   stylesheet: projects
 ---
+<img src="/assets/{{ image }}" />
 <h1>{{ title }}</h1>
+<section class="meta">
+  <p><em>for {{organization}} as a {{role}}</em></p>
+  <p><em>built with {{tools}}</em></p>
+</section>
 {{ content | safe }}
 
 {% include "components/backlinksSection.njk" %}
