Write the colophon and tweak the about

--- a/_includes/styles/base.css
+++ b/_includes/styles/base.css
@@ -108,6 +108,7 @@ a:hover {
 .search-results a {
   display: flex;
   justify-content: space-between;
+  gap: 2rem;
 }
 .search-results a span {
   color: var(--mid);
