--- a/_includes/components/footer.njk
+++ b/_includes/components/footer.njk
@@ -1,6 +1,6 @@
 <footer>
   <p style="margin: 0;">&copy; 2025 Frank Noirot</p>
   <div style="display: flex; gap: 1rem;">
-    <a href="#">Colophon</a>
+    <a href="/colophon">Colophon</a>
   </div>
 </footer>
