Add a paragraph and meta to template

--- a/pages/index.liquid
+++ b/pages/index.liquid
@@ -1,8 +1,10 @@
 ---
-title: Frank Noirot's hellscape
+title: Frank Noirot's digital garden
 layout: layouts/base.njk
 ---
 <h1>{{ title }}</h1>
+
+Here are my personal notes and writing. This is a digital garden, so all work is in-progress.
 
 {% for type in contentTypes %}
 <a href="/{{ type.name }}">
