--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -1,4 +1,6 @@
 ---
+title: Frank Noiro
+description: Writings from Brooklyn, a digital garden.
 ---
 
 <!doctype html>
@@ -7,6 +9,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{%- if title -%}{{title}} |&nbsp;{%- endif -%}f.noirot's garden</title>
+    <meta name="title" content="{%- if title -%}{{title}} |&nbsp;{%- endif -%}f.noirot's garden" />
+    <meta name="description" content="{{ description }}" />
     <link rel="preload" href="/styles/fonts.css" as="style">
     <link rel="stylesheet" href="/styles/base.css">
     <link rel="stylesheet" href="https://unpkg.com/prismjs@1.20.0/themes/prism-coy.css">
