--- a/_includes/styles/posts.css
+++ b/_includes/styles/posts.css
@@ -9,3 +9,12 @@ main video {
   max-width: 100%;
   margin: 3rem auto;
 }
+
+.meta {
+  color: var(--mid);
+  border-inline-start: 1px solid;
+}
+
+.meta p {
+  margin: 0.5rem;
+}
