--- a/_includes/layouts/posts.njk
+++ b/_includes/layouts/posts.njk
@@ -3,6 +3,11 @@
   stylesheet: posts
 ---
 <h1>{{title}}</h1>
+<section class="meta">
+  <p><em>{{ description }}</em></p>
+  <p><em>A {{ growthStage }}-stage note</em></p>
+  <p><em>Last tended {{ updated | formatDate }} originally posted {{ created | formatDate }}</em></p>
+</section>
 {{ content | safe }}
 
 {% include "components/backlinksSection.njk" %}
